[tool.poetry]
name = "agenttorch-testing"
version = "0.1.0"
description = ""
authors = ["James Bristow <jbris@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
agent-torch = "^0.4.0"
dspy = "^2.6.13"
epiweeks = "^2.3.0"
scipy = "^1.15.2"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
numpy = "^2.2.4"
ipython = "<9.0.2"
ipywidgets = "^8.1.5"
jupyter-core = "^5.7.2"
jupyterlab = "^4.3.6"
osmnx = "^2.0.1"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
